Thread function on off added

--- a/jupyter_notebooks/inference.ipynb
+++ b/jupyter_notebooks/inference.ipynb
@@ -9,8 +9,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "c:\\Dev\\MinorProject\\WDSS\\jupyter_notebooks\n",
-      "c:\\Dev\\MinorProject\\WDSS\n"
+      "d:\\minorProject\\WDSS\\jupyter_notebooks\n",
+      "d:\\minorProject\\WDSS\n"
      ]
     }
    ],
@@ -42,9 +42,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Dev\\MinorProject\\WDSS\\.venv\\Lib\\site-packages\\torchvision\\models\\_utils.py:208: UserWarning: The parameter 'pretrained' is deprecated since 0.13 and may be removed in the future, please use 'weights' instead.\n",
+      "c:\\Users\\kunwa\\Anaconda\\envs\\wdss\\Lib\\site-packages\\torchvision\\models\\_utils.py:208: UserWarning: The parameter 'pretrained' is deprecated since 0.13 and may be removed in the future, please use 'weights' instead.\n",
       "  warnings.warn(\n",
-      "c:\\Dev\\MinorProject\\WDSS\\.venv\\Lib\\site-packages\\torchvision\\models\\_utils.py:223: UserWarning: Arguments other than a weight enum or `None` for 'weights' are deprecated since 0.13 and may be removed in the future. The current behavior is equivalent to passing `weights=VGG16_Weights.IMAGENET1K_V1`. You can also use `weights=VGG16_Weights.DEFAULT` to get the most up-to-date weights.\n",
+      "c:\\Users\\kunwa\\Anaconda\\envs\\wdss\\Lib\\site-packages\\torchvision\\models\\_utils.py:223: UserWarning: Arguments other than a weight enum or `None` for 'weights' are deprecated since 0.13 and may be removed in the future. The current behavior is equivalent to passing `weights=VGG16_Weights.IMAGENET1K_V1`. You can also use `weights=VGG16_Weights.DEFAULT` to get the most up-to-date weights.\n",
       "  warnings.warn(msg)\n"
      ]
     },
@@ -52,14 +52,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loading model from: c:\\Dev\\MinorProject\\WDSS\\.venv\\Lib\\site-packages\\lpips\\weights\\v0.1\\vgg.pth\n"
+      "Loading model from: c:\\Users\\kunwa\\Anaconda\\envs\\wdss\\Lib\\site-packages\\lpips\\weights\\v0.1\\vgg.pth\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Dev\\MinorProject\\WDSS\\.venv\\Lib\\site-packages\\lpips\\lpips.py:107: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
+      "c:\\Users\\kunwa\\Anaconda\\envs\\wdss\\Lib\\site-packages\\lpips\\lpips.py:107: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
       "  self.load_state_dict(torch.load(model_path, map_location='cpu'), strict=False)\n"
      ]
     }
@@ -92,9 +92,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Job: Navin_relu_mse, Model: WDSSV5, Device: cuda\n",
-      "Model path: out\\Navin_relu_mse-WDSSV5\\model\n",
-      "Log path: out\\Navin_relu_mse-WDSSV5\\logs\n"
+      "Job: kirtan_frt_relu, Model: WDSSV5, Device: cuda\n",
+      "Model path: out\\kirtan_frt_relu-WDSSV5\\model\n",
+      "Log path: out\\kirtan_frt_relu-WDSSV5\\logs\n"
      ]
     }
    ],
@@ -143,7 +143,20 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'cpuinfo'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[7], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mnetwork\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mtrainer\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Trainer\n\u001b[0;32m      3\u001b[0m trainer \u001b[38;5;241m=\u001b[39m Trainer(settings, model, optimizer, scheduler, criterion, train_dataset, val_dataset, test_dataset)\n",
+      "File \u001b[1;32md:\\minorProject\\WDSS\\network\\trainer.py:24\u001b[0m\n\u001b[0;32m     22\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mtyping\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Dict, Tuple , Any\n\u001b[0;32m     23\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mjson\u001b[39;00m\n\u001b[1;32m---> 24\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mcpuinfo\u001b[39;00m\n\u001b[0;32m     26\u001b[0m \u001b[38;5;28;01mclass\u001b[39;00m \u001b[38;5;21;01mTrainer\u001b[39;00m:\n\u001b[0;32m     27\u001b[0m     \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__init__\u001b[39m(\u001b[38;5;28mself\u001b[39m, settings: Settings, \n\u001b[0;32m     28\u001b[0m                  model: ModelBase, \n\u001b[0;32m     29\u001b[0m                  optimizer: torch\u001b[38;5;241m.\u001b[39moptim\u001b[38;5;241m.\u001b[39mOptimizer, \n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     33\u001b[0m                  validation_dataset: WDSSDatasetCompressed,\n\u001b[0;32m     34\u001b[0m                  test_dataset: WDSSDatasetCompressed):\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'cpuinfo'"
+     ]
+    }
+   ],
    "source": [
     "from network.trainer import Trainer\n",
     "\n",
@@ -152,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -214,7 +227,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "wdss",
    "language": "python",
    "name": "python3"
   },
@@ -228,7 +241,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
