--- a/jupyter_notebooks/setup_for_dfasr.ipynb
+++ b/jupyter_notebooks/setup_for_dfasr.ipynb
@@ -2,46 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "c:\\Dev\\MinorProject\\WDSS\\jupyter_notebooks\n",
-      "c:\\Dev\\MinorProject\\WDSS\n",
-      "Job: Navin_relu_mse, Model: WDSSV5, Device: cuda\n",
-      "Model path: out\\Navin_relu_mse-WDSSV5\\model\n",
-      "Log path: out\\Navin_relu_mse-WDSSV5\\logs\n",
-      "Setting up [LPIPS] perceptual loss: trunk [vgg], v[0.1], spatial [off]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Dev\\MinorProject\\WDSS\\.venv\\Lib\\site-packages\\torchvision\\models\\_utils.py:208: UserWarning: The parameter 'pretrained' is deprecated since 0.13 and may be removed in the future, please use 'weights' instead.\n",
-      "  warnings.warn(\n",
-      "c:\\Dev\\MinorProject\\WDSS\\.venv\\Lib\\site-packages\\torchvision\\models\\_utils.py:223: UserWarning: Arguments other than a weight enum or `None` for 'weights' are deprecated since 0.13 and may be removed in the future. The current behavior is equivalent to passing `weights=VGG16_Weights.IMAGENET1K_V1`. You can also use `weights=VGG16_Weights.DEFAULT` to get the most up-to-date weights.\n",
-      "  warnings.warn(msg)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loading model from: c:\\Dev\\MinorProject\\WDSS\\.venv\\Lib\\site-packages\\lpips\\weights\\v0.1\\vgg.pth\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from nortebook_init import *"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +32,7 @@
     "        idx = \".\" + str(i).zfill(4) + \".exr\"\n",
     "        # Read\n",
     "        base_color = ImageUtils.load_exr_image_opencv(f\"{base_path}\\\\BaseColor{idx}\")\n",
-    "        diffuse = ImageUtils.load_exr_image_opencv(f\"{base_path}\\\\DiffuseColor{idx}\")\n",
+    "        # diffuse = ImageUtils.load_exr_image_opencv(f\"{base_path}\\\\DiffuseColor{idx}\")\n",
     "        metallic_roughness_specular = ImageUtils.load_exr_image_opencv(f\"{base_path}\\\\MetallicRoughnessSpecular{idx}\")\n",
     "        motion_vector = ImageUtils.load_exr_image_opencv(f\"{base_path}\\\\MotionVector{idx}\")\n",
     "        NoVDepth = ImageUtils.load_exr_image_opencv(f\"{base_path}\\\\NoVDepth{idx}\")\n",
@@ -73,8 +43,10 @@
     "        specular = metallic_roughness_specular[:, :, 2:3]\n",
     "        normal_depth = np.concatenate([normal, NoVDepth[:, :, 1:2]], axis=2)\n",
     "\n",
+    "        albedo = base_color + (1 - metallic_roughness_specular[:, :, 0:1]) * 0.08 * metallic_roughness_specular[:, :, 2:3]\n",
+    "\n",
     "        # Save\n",
-    "        ImageUtils.save_exr_image_opencv(diffuse, f\"{out_path}\\\\Asian_Village_DemoAlbedo{idx}\")\n",
+    "        ImageUtils.save_exr_image_opencv(albedo, f\"{out_path}\\\\Asian_Village_DemoAlbedo{idx}\")\n",
     "        ImageUtils.save_exr_image_opencv(base_color, f\"{out_path}\\\\Asian_Village_DemoBaseColor{idx}\")\n",
     "        ImageUtils.save_exr_image_opencv(mv_metallic_roughness, f\"{out_path}\\\\Asian_Village_DemoMotionVectorAndMetallicAndRoughness{idx}\")\n",
     "        ImageUtils.save_exr_image_opencv(nov, f\"{out_path}\\\\Asian_Village_DemoNoV{idx}\")\n",
@@ -84,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +70,7 @@
     "        idx = \".\" + str(i).zfill(4) + \".exr\"\n",
     "        # Read\n",
     "        base_color = ImageUtils.load_exr_image_opencv(f\"{base_path}\\\\BaseColor{idx}\")\n",
-    "        diffuse = ImageUtils.load_exr_image_opencv(f\"{base_path}\\\\DiffuseColor{idx}\")\n",
+    "        # diffuse = ImageUtils.load_exr_image_opencv(f\"{base_path}\\\\DiffuseColor{idx}\")\n",
     "        metallic_roughness_specular = ImageUtils.load_exr_image_opencv(f\"{base_path}\\\\MetallicRoughnessSpecular{idx}\")\n",
     "        motion_vector = ImageUtils.load_exr_image_opencv(f\"{base_path}\\\\MotionVector{idx}\")\n",
     "        NoVDepth = ImageUtils.load_exr_image_opencv(f\"{base_path}\\\\NoVDepth{idx}\")\n",
@@ -110,8 +82,10 @@
     "        specular = metallic_roughness_specular[:, :, 2:3]\n",
     "        normal_depth = np.concatenate([normal, NoVDepth[:, :, 1:2]], axis=2)\n",
     "\n",
+    "        albedo = base_color + (1 - metallic_roughness_specular[:, :, 0:1]) * 0.08 * metallic_roughness_specular[:, :, 2:3]\n",
+    "\n",
     "        # Save\n",
-    "        ImageUtils.save_exr_image_opencv(diffuse, f\"{out_path}\\\\Asian_Village_DemoAlbedo{idx}\")\n",
+    "        ImageUtils.save_exr_image_opencv(albedo, f\"{out_path}\\\\Asian_Village_DemoAlbedo{idx}\")\n",
     "        ImageUtils.save_exr_image_opencv(base_color, f\"{out_path}\\\\Asian_Village_DemoBaseColor{idx}\")\n",
     "        ImageUtils.save_exr_image_opencv(mv_metallic_roughness, f\"{out_path}\\\\Asian_Village_DemoMotionVectorAndMetallicAndRoughness{idx}\")\n",
     "        ImageUtils.save_exr_image_opencv(nov, f\"{out_path}\\\\Asian_Village_DemoNoV{idx}\")\n",
@@ -122,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,27 +112,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "base_path = \"D:\\\\Dev\\\\MinorProjDataset\\\\V5\"\n",
-    "total_frames = 126\n",
-    "data_path = base_path + \"\\\\Industry_3\"\n",
-    "out_path = base_path + \"\\\\Industrial_3_packed\"\n",
+    "base_path = \"D:\\\\Dev\\\\MinorProjDataset\\\\V5\\\\DFASR\"\n",
+    "total_frames = 124\n",
+    "data_path = base_path + \"\\\\Brass_Town\"\n",
+    "out_path = base_path + \"\\\\Brass_Town_DFASR\"\n",
+    "# Check data path folder exists\n",
+    "if not os.path.exists(data_path):\n",
+    "    print(\"Data path does not exist\")\n",
     "os.makedirs(out_path, exist_ok=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 126/126 [08:46<00:00,  4.18s/it]\n"
+      "100%|██████████| 124/124 [09:58<00:00,  4.83s/it]\n"
      ]
     }
    ],
@@ -168,21 +145,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "D:\\Dev\\MinorProjDataset\\V5\\Industrial_3_packed\\Nojitter-540P\n"
+      "D:\\Dev\\MinorProjDataset\\V5\\DFASR\\Brass_Town_DFASR\\Nojitter-540P\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 126/126 [04:02<00:00,  1.93s/it]\n"
+      "100%|██████████| 124/124 [03:47<00:00,  1.83s/it]\n"
      ]
     }
    ],
@@ -192,21 +169,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/126 [00:00<?, ?it/s]"
+      "  0%|          | 0/124 [00:00<?, ?it/s]"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 126/126 [03:05<00:00,  1.48s/it]\n"
+      "100%|██████████| 124/124 [03:10<00:00,  1.53s/it]\n"
      ]
     }
    ],
