--- a/jupyter_notebooks/ModelV4.ipynb
+++ b/jupyter_notebooks/ModelV4.ipynb
@@ -2017,7 +2017,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "wdss",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -2031,7 +2031,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
