--- a/jupyter_notebooks/dataset_compressed.ipynb
+++ b/jupyter_notebooks/dataset_compressed.ipynb
@@ -239,7 +239,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "wdss",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -253,7 +253,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
