--- a/jupyter_notebooks/pack_and_downsample.ipynb
+++ b/jupyter_notebooks/pack_and_downsample.ipynb
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,8 +88,8 @@
     "    ImageUtils.save_exr_image_opencv(packed, save_path + idx)\n",
     "\n",
     "    # Delete the normal and specular images\n",
-    "    # os.remove(normal_path + idx)\n",
-    "    # os.remove(specular_path + idx)\n",
+    "    os.remove(normal_path + idx)\n",
+    "    os.remove(specular_path + idx)\n",
     "\n",
     "def pack_base_color_depth(path: str, frame_no: int):\n",
     "    base_color_path = path + \"BaseColor\"\n",
@@ -105,8 +105,8 @@
     "    ImageUtils.save_exr_image_opencv(packed, save_path + idx)\n",
     "\n",
     "    # Delete the base color and depth images\n",
-    "    # os.remove(base_color_path + idx)\n",
-    "    # os.remove(depth_path + idx)\n",
+    "    os.remove(base_color_path + idx)\n",
+    "    os.remove(depth_path + idx)\n",
     "\n",
     "def pack_pretonemapped_metallic(path: str, frame_no: int):\n",
     "    pretonemapped_path = path + \"PreTonemapHDRColor\"\n",
@@ -122,8 +122,8 @@
     "    ImageUtils.save_exr_image_opencv(packed, save_path + idx)\n",
     "\n",
     "    # Delete the pretonemapped and metallic images\n",
-    "    # os.remove(pretonemapped_path + idx)\n",
-    "    # os.remove(metallic_path + idx)\n",
+    "    os.remove(pretonemapped_path + idx)\n",
+    "    os.remove(metallic_path + idx)\n",
     "\n",
     "def pack_mv_roughness_nov(path: str, frame_no: int):\n",
     "    mv_path = path + \"MotionVector\"\n",
@@ -141,9 +141,9 @@
     "    ImageUtils.save_exr_image_opencv(packed, save_path + idx)\n",
     "\n",
     "    # Delete the mv, roughness and nov images\n",
-    "    # os.remove(mv_path + idx)\n",
-    "    # os.remove(roughness_path + idx)\n",
-    "    # os.remove(nov_path + idx)"
+    "    os.remove(mv_path + idx)\n",
+    "    os.remove(roughness_path + idx)\n",
+    "    os.remove(nov_path + idx)"
    ]
   },
   {
