removed a convolution layer because it was causing problems

--- a/jupyter_notebooks/training.ipynb
+++ b/jupyter_notebooks/training.ipynb
@@ -66,6 +66,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "0608fd2a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "try:\n",
+    "    trainer.load_latest_checkpoint()\n",
+    "    print(f\"Checkpoint {trainer.total_epochs} loaded.\")\n",
+    "except:\n",
+    "    print(\"No checkpoint found, starting from scratch.\")\n",
+    "    pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "06679238",
    "metadata": {},
    "outputs": [],
