--- a/jupyter_notebooks/training.ipynb
+++ b/jupyter_notebooks/training.ipynb
@@ -17,7 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "settings = initialize_settings(\"config/config-test.json\")\n",
+    "settings = initialize_settings(\"config/config.json\")\n",
     "train, val, test = WDSSDataset.get_datasets(settings)\n",
     "preprocessor = get_preprocessor(settings)"
    ]
@@ -73,8 +73,9 @@
     "try:\n",
     "    trainer.load_latest_checkpoint()\n",
     "    print(f\"Checkpoint {trainer.total_epochs} loaded.\")\n",
-    "except:\n",
+    "except Exception as e:\n",
     "    print(\"No checkpoint found, starting from scratch.\")\n",
+    "    print(e)\n",
     "    pass"
    ]
   },
